--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -114,7 +114,7 @@
 
     <!-- main content area -->
     <div class="main-content" id="main-content">
-        <img src="img.jpg" class="img-fluid text-center" alt="Responsive image" height="700px">
+        <img src="school.jpg" class="img-fluid text-center" alt="Responsive image" height="700px">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
